--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -98,3 +98,26 @@ button:hover {
 .vector {
     max-width: 20%;
 }
+
+footer {
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 20px;
+    background-color: var(--text-color);
+    margin: 20px auto 0 auto;
+}
+
+footer p {
+    color: var(--primary-color);
+    font-size: 1rem;
+    font-family: var(--font-family);
+}
+footer a {
+    color: var(--primary-color);
+    font-size: 1.2rem;
+    font-family: var(--font-family);
+    text-decoration: none;
+}
